--- a/utils/sample_config.json
+++ b/utils/sample_config.json
@@ -2,11 +2,15 @@
   {
     "name": "walk",
     "description": "go for a walk",
-    "duration_of_task": 5
+    "duration_in_minutes": 5,
+    "important": true,
+    "urgent": false
   },
   {
     "name": "groceries",
     "description": "buy groceries",
-    "duration_of_task": 5
+    "duration_in_minutes": 5,
+    "important": true,
+    "urgent": false
   }
 ]
