added application styling, title styling, remaining time of day counter, actions to take (CTRL + F to Finish Task and CTRL + D to Delegate a Task that can be delegated), also changed the config_loader to take in the hours of a day (remaining time of day) from the config.json

--- a/utils/sample_config.json
+++ b/utils/sample_config.json
@@ -1,16 +1,19 @@
-[
-  {
-    "name": "walk",
-    "description": "go for a walk",
-    "duration_in_minutes": 5,
-    "important": true,
-    "urgent": false
-  },
-  {
-    "name": "groceries",
-    "description": "buy groceries",
-    "duration_in_minutes": 5,
-    "important": true,
-    "urgent": false
-  }
-]
+{
+  "tasks": [
+    {
+      "name": "walk",
+      "description": "go for a walk",
+      "duration_in_minutes": 5,
+      "important": true,
+      "urgent": false
+    },
+    {
+      "name": "groceries",
+      "description": "buy groceries",
+      "duration_in_minutes": 5,
+      "important": true,
+      "urgent": false
+    }
+  ],
+  "hours": 4
+}
