--- a/config.json
+++ b/config.json
@@ -1,30 +1,19 @@
-[
-  {
-    "name": "work",
-    "description": "finish work project",
-    "duration_in_minutes": 1,
-    "important": true,
-    "urgent": true
-  },
-  {
-    "name": "walk",
-    "description": "go for a walk",
-    "duration_in_minutes": 3,
-    "important": true,
-    "urgent": false
-  },
-  {
-    "name": "groceries",
-    "description": "buy groceries",
-    "duration_in_minutes": 3,
-    "important": true,
-    "urgent": false
-  },
-  {
-    "name": "game",
-    "description": "play games",
-    "duration_in_minutes": 999,
-    "important": false,
-    "urgent": false
-  }
-]
+{
+  "tasks": [
+    {
+      "name": "car handling",
+      "description": "can be delegated",
+      "duration_in_minutes": 1,
+      "important": false,
+      "urgent": true
+    },
+    {
+      "name": "game",
+      "description": "play games",
+      "duration_in_minutes": 999,
+      "important": false,
+      "urgent": false
+    }
+  ],
+  "hours": 5
+}
